--- a/first-project/src/App.css
+++ b/first-project/src/App.css
@@ -18,6 +18,7 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  margin-top: 40px;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
