--- a/first-project/src/posts.css
+++ b/first-project/src/posts.css
@@ -1,6 +1,7 @@
 .posts {
     border-color: teal;
+    border-style: solid ;
     border-width: 2px;
-    padding: 10px;
+    padding: 15px;
     
 }
