--- a/first-project/src/sideBar.css
+++ b/first-project/src/sideBar.css
@@ -3,16 +3,17 @@
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    border-color: teal; /* Keep only this */
-    border-style: solid;  /* Add border style */
+    border-color: teal;
+    border-style: solid;
     border-width: 2px;
     padding: 7px;
-    width: 30%;
+   
 }
 .sidebar :hover {
     background-color: rgb(97, 1, 97)
 }
 .tagButton {
     background-color: purple;
-    margin: 5px;
+    margin-bottom: 10px;
+    margin-right: 7px;
 }
