--- a/first-project/src/sideBar.css
+++ b/first-project/src/sideBar.css
@@ -7,6 +7,7 @@
     border-style: solid;
     border-width: 2px;
     padding: 10px;
+    padding-top: 20px;
    
 }
 .sidebar :hover {
@@ -14,6 +15,7 @@
 }
 .tagButton {
     background-color: purple;
+    
     margin-bottom: 15px;
     margin-right: 15px;
     padding: 5px;
