--- a/first-project/src/sideBar.css
+++ b/first-project/src/sideBar.css
@@ -15,8 +15,10 @@
 }
 .tagButton {
     background-color: purple;
-    
+    display: flex;
+    align-items: center;
     margin-bottom: 15px;
     margin-right: 15px;
-    padding: 5px;
+    padding: 10px;
+    gap: 5px;
 }
